--- a/index.html
+++ b/index.html
@@ -1,9 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>My site</title>
+        <meta charset = "utf-8"/>
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>This is my Github pages website!</h1>
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="right-side">
+                    <div class="nav-link-wrapper">
+                        <a href="index.html">Home</a>
+                    </div>
+                    <div class="nav-link-wrapper">
+                        <a href="about.html">About</a>
+                    </div>
+                </div>
+                <div class="left-side">
+                    <div class="name">
+                        <div>PETRO TELEVAN</div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-wrapper">
+                <div class="portfolio-items-wrapper">
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio1.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="quip.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                I built the Quip Ecommerce platform, named a Top 25 Invention by Time Magazine in 2016.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="shop-hacker.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Coding bootcamp and learning management system.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="crondose.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Eventbrite is the leading event management platform on the web with millions of individuals utilizing their applications to find, register or, and management events in numerous industries.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="dailysmarty.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Shop Hacker allows you to easily import digital products such as elearning courses, software, and games directly into your ecommerce store.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio5.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="dashtrack.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Online tutorials and productivity tips
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio6.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="devcamp.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Keep track of what you learn every day.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio7.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="devtrunk.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                What you track improves. DashTrack is a journal that makes it easy to track your daily tasks and make the most of your time each day.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio8.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="edutechional.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Online shop for developer happiness.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-img-background" style="background-image:url(images/portfolio9.jpg)">
+
+                        </div>
+                        <div class="img-text-wrapper">
+                            <div class="logo-wrapper">
+                                <img src="ministry-safe.png" alt="">
+                            </div>
+                            <div class="subtitle">
+                                Online technology tutorials.
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </body>
+    <script>
+        const portfolioItems = document.querySelectorAll('.portfolio-item-wrapper')
+        portfolioItems.forEach(portfolioItem => {
+            portfolioItem.addEventListener('mouseover', () => {
+                portfolioItem.childNodes[1].classList.add('img-darken');
+            })
+            portfolioItem.addEventListener('mouseout', () => {
+                portfolioItem.childNodes[1].classList.remove('img-darken');
+            })
+        })
+    </script>
 </html>
